# Kosmos

./: .env.example  CHANGELOG.md  IMPLEMENTATION_PLAN.md  MANIFEST.in  MID_PHASE_COMPACTION_GUIDE.md  PROMPT_README_UPDATE.md  README.md  REQUIREMENTS.md  docker-compose.yml  pyproject.toml
.claude/commands/: README.md
.claude/skills/kosmos-e2e-testing/: SKILL.md  reference.md
.claude/skills/kosmos-e2e-testing/configs/: full.env
.claude/skills/kosmos-e2e-testing/lib/: config_manager.py  provider_detector.py  report_generator.py  test_runner.py
.claude/skills/kosmos-e2e-testing/templates/: e2e-runner.py
alembic/versions/: dc24ead48293_add_profiling_tables.py
docs/: MIGRATION_MULTI_PROVIDER.md  PHASE_10_WEEK_4_PART_2_CHECKPOINT_2025-11-12.md  PHASE_2_CHECKPOINT_2025-11-07.md  PHASE_9_CHECKPOINT_2025-11-08.md
docs/developer/: contributing.md  developer-guide.md
docs/providers/: README.md
docs/release-notes/: v1.0.md
docs/user/: user-guide.md
examples/: README.md
kosmos/: __init__.py  config.py
kosmos/agents/: literature_analyzer.py
kosmos/cli/: main.py
kosmos/cli/commands/: profile.py
kosmos/core/: async_llm.py  domain_router.py  profiling.py
kosmos/db/: __init__.py
kosmos/domains/biology/: __init__.py  apis.py  genomics.py  metabolomics.py  ontology.py
kosmos/domains/materials/: __init__.py  apis.py  ontology.py  optimization.py
kosmos/domains/neuroscience/: __init__.py  apis.py  connectomics.py  neurodegeneration.py  ontology.py
kosmos/execution/: executor.py
kosmos/experiments/templates/: base.py  computational.py
kosmos/experiments/templates/biology/: __init__.py  gwas_multimodal.py  metabolomics_comparison.py
kosmos/experiments/templates/materials/: __init__.py  optimization.py  parameter_correlation.py  shap_analysis.py
kosmos/experiments/templates/neuroscience/: __init__.py  connectome_scaling.py  differential_expression.py
kosmos/knowledge/: __init__.py  domain_kb.py  embeddings.py  semantic_search.py  vector_db.py
kosmos/literature/: arxiv_client.py  base_client.py  cache.py  pdf_extractor.py  pubmed_client.py  semantic_scholar.py  unified_search.py
kosmos/models/: __init__.py  domain.py
kosmos/utils/: setup.py
scripts/: init_db.sql
